# flake8-timeout

./: .gitignore  .pre-commit-config.yaml  LICENCE  README.md  flake8_timeout.py  setup.cfg  tox.ini
.github/workflows/: ci.yml
tests/: flake8_timeout_test.py
