[metadata]
name = flake8_timeout
version = 0.3.0
description = flake8 plugin which checks that a timeout is set to all requests and urllib.request.open calls
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jkittner/flake8-timeout
author = Jonas Kittner
author_email = jkittner@users.noreply.github.com
license = MIT
license_files = LICENCE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules = flake8_timeout
install_requires =
    flake8
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*

[options.entry_points]
flake8.extension =
    TIM=flake8_timeout:Plugin

[bdist_wheel]
universal = True

[coverage:run]
parallel = True
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_unreachable = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
